# pychadwick

./: CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
pychadwick/: chadwick.py
pychadwick/libutils/: cwlib.py
tests/pychadwick/chadwick/: test_pychadwick.py
