[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "pychadwick"
version = "0.7.0"
description = "Python bindings to the Chadwick library (Retrosheet event-file parser)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-2.0-only" }
authors = [{ name = "Ben Dilday", email = "ben.dilday.phd@gmail.com" }]
dependencies = ["pandas>=1.0.4", "requests"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/bdilday/pychadwick"

[project.scripts]
pycwevent = "pychadwick.cli.pycwevent:main"

[tool.scikit-build]
wheel.packages = ["pychadwick"]
build-dir = "build/{wheel_tag}"
# editable installs need the compiled lib on disk for cwlib.py's ctypes load
editable.rebuild = true
